# storefront

./: .gitignore  Cargo.toml  License-boilerplate  License-boilerplate.lisp  README.md  README.org  TODO.org  index.html  main.lisp  models.lisp  package.lisp  queer-web.asd  routes.lisp  templates-compile.lisp
src/: components.rs  main.rs  nav.rs  pages.rs
src/components/: nav.rs  privacy.rs
src/pages/: home.rs  page404.rs  privacy.rs
static/: style.css
templates/: 404.html  base.html  index.html  list-test.html  privacy.html
templates/partial/: footer.html  item-list.html  nav-item.html  navbar.html
tests/: main-test.lisp
