[package]
name = "storefront"
version = "0.1.0"
edition = "2021"
description = "A website that hosts storefronts for Indian Queer artists"
repository = "https://github.com/crmsnbleyd/storefront"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
